Add new property toggleupdatedateperiodjobs #147

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -158,6 +158,7 @@ else
 
     private Day selectedDay;
     private DayPeriod selectedDayPeriod;
+    private bool ToggleUpdateDatePeriodJobs { get; set; }
     private bool ToggleUpdateDatePeriod { get; set; }
 
 
@@ -260,7 +261,7 @@ else
 
     private async void TogglePopUp(Day day, DayPeriod dayPeriod)
     {
-        //ToggleUpdateDatePeriodJobs = false;
+        ToggleUpdateDatePeriodJobs = false;
         ToggleUpdateDatePeriod = false;
         ToggleSchedulerPopUp = true;
         selectedDay = day;
