Create method updateperiod #147

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -161,6 +161,12 @@ else
     private bool ToggleUpdateDatePeriodJobs { get; set; }
     private bool ToggleUpdateDatePeriod { get; set; }
 
+    
+
+    private void UpdatePeriod()
+    {
+        StateHasChanged();
+    }
 
     private async void AddDayPeriod()
     {
