Create method toggledayperiodpopup #147

--- a/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
+++ b/src/Ezac.Roster.Web/Components/Pages/Calendar.razor
@@ -161,7 +161,15 @@ else
     private bool ToggleUpdateDatePeriodJobs { get; set; }
     private bool ToggleUpdateDatePeriod { get; set; }
 
-    
+    private async void ToggleDayPeriodPopUp(DayPeriod dayPeriod)
+    {
+        ToggleUpdateDatePeriod = false;
+        ToggleSchedulerPopUp = false;
+        ToggleUpdateDatePeriodJobs = true;
+        selectedDayPeriod = dayPeriod;
+
+        await InvokeAsync(StateHasChanged);
+    }
 
     private void UpdatePeriod()
     {
