Create method setselectedjob #147

--- a/src/Ezac.Roster.Web/Components/Components/UpdateDayPeriodJobsPopUp.razor
+++ b/src/Ezac.Roster.Web/Components/Components/UpdateDayPeriodJobsPopUp.razor
@@ -109,7 +109,14 @@
         }
     }
 
-    
+    private void SetSelectedJob(ChangeEventArgs e)
+    {
+        var selectedJobName = e.Value.ToString();
+        if (!string.IsNullOrEmpty(selectedJobName))
+        {
+            selectedJob = selectedJobName;
+        }
+    }
 
     
 
