--- a/src/Ezac.Roster.Web/Components/Components/SchedulerPopUp.razor
+++ b/src/Ezac.Roster.Web/Components/Components/SchedulerPopUp.razor
@@ -4,6 +4,14 @@
 
 @inject IUserService _userService
 @inject IPermissionsService _permissionService
+@inject IJobService _jobService
+
+@if (string.IsNullOrWhiteSpace(feedback) == false)
+{
+    <div class="alert alert-success" role="alert">
+        @feedback
+    </div>
+}
 
 <div class="container">
     <div class="row">
@@ -17,7 +25,7 @@
             <button @onclick="e => OnCancel.InvokeAsync()">Annuleren</button>
             <div class="mb-3">
                 <select class="form-select" @onchange="e => OnGetStaff.InvokeAsync(e)">
-                    <option value="">Selecteer een baan</option>
+                    <option value="">Selecteer een bevoegdheid</option>
                     @foreach (var permission in _permissions)
                     {
                         <option>@permission.Name</option>
@@ -42,12 +50,8 @@
                     </tbody>
                 </table>
             </div>
-        </div>
-    </div>
-    <div class="row">
-        <div class="col-lg-12">
             <div>
-                <button class="btn btn-primary">Dienst toevoegen</button>
+                <button @onclick="e => OnUpdate.InvokeAsync(DayPeriod)" class="btn btn-primary">Bijwerken</button>
             </div>
         </div>
     </div>
@@ -55,6 +59,10 @@
 
 
 @code {
+    private string feedback = string.Empty;
+
+    [Parameter]
+    public EventCallback<DayPeriod> OnUpdate { get; set; }
     private List<BaseListModel> _permissions { get; set; } = new List<BaseListModel>();
     [Parameter]
     public List<UserListModel> Staff { get; set; }
@@ -64,8 +72,6 @@
     public EventCallback OnCancel { get; set; }
     [Parameter]
     public EventCallback<UserListModel> OnDragged { get; set; }
-
-    
     [Parameter]
     public Day Day { get; set; }
     [Parameter]
@@ -74,10 +80,6 @@
     protected async override Task OnInitializedAsync()
     {
         await RefreshData();
-        if (Staff.Count > 0)
-        {
-            Staff.Clear();
-        }
     }
 
     public async Task RefreshData()
